@@ -87,6 +87,7 @@ E(OP_HPUpdate)
 E(OP_BlockedBuffs)
 E(OP_RemoveBlockedBuffs)
 E(OP_DeleteSpawn)
+E(OP_ClickObjectAction)
 
 //list of packets we need to decode on the way in:
 D(OP_SetServerFilter)
